Bug 385123. Don't insert spaces after holes while we build a textrun. r=vlad