gfx/thebes/test/gfxFontSelectionTest.cpp
@@ -47,6 +47,7 @@
 #include "gfxContext.h"
 #include "gfxFont.h"
 #include "gfxPlatform.h"
+#include "gfxTextRunWordCache.h"
 
 #include "gfxFontTest.h"
 
@@ -62,6 +63,10 @@ enum {
     S_UTF8 = 0,
     S_ASCII = 1
 };
+
+class FrameTextRunCache;
+
+static gfxTextRunWordCache *gTextRunCache;
 
 struct LiteralArray {
     LiteralArray (unsigned long l1) {
@@ -294,20 +299,23 @@ RunTest (TestEntry *test, gfxContext *ctx) {
         flags |= gfxTextRunFactory::TEXT_IS_RTL;
     }
     PRUint32 length;
+    PRBool isInCache;
     if (test->stringType == S_ASCII) {
         flags |= gfxTextRunFactory::TEXT_IS_ASCII | gfxTextRunFactory::TEXT_IS_8BIT;
         length = strlen(test->string);
-        textRun = fontGroup->MakeTextRun(NS_REINTERPRET_CAST(PRUint8*, test->string), length, &params, flags);
+        textRun = gTextRunCache->MakeTextRun(NS_REINTERPRET_CAST(PRUint8*, test->string), length, fontGroup, &params, flags, &isInCache);
     } else {
         flags |= gfxTextRunFactory::TEXT_HAS_SURROGATES; // just in case
         NS_ConvertUTF8toUTF16 str(nsDependentCString(test->string));
         length = str.Length();
-        textRun = fontGroup->MakeTextRun(str.get(), length, &params, flags);
+        textRun = gTextRunCache->MakeTextRun(str.get(), length, fontGroup, &params, flags, &isInCache);
     }
 
     gfxFontTestStore::NewStore();
     textRun->Draw(ctx, gfxPoint(0,0), 0, length, nsnull, nsnull, nsnull);
     gfxFontTestStore *s = gfxFontTestStore::CurrentStore();
+
+    gTextRunCache->RemoveTextRun(textRun);
 
     if (!test->Check(s)) {
         DumpStore(s);
@@ -339,6 +347,8 @@ main (int argc, char **argv) {
     rv = gfxPlatform::Init();
     if (NS_FAILED(rv))
         return -1;
+
+    gTextRunCache = new gfxTextRunWordCache();
 
     // let's get all the xpcom goop out of the system
     fflush (stderr);
